fixed alignment on mobile footer; added privacy policy page

--- a/app/common/Footer/styles.css
+++ b/app/common/Footer/styles.css
@@ -6,6 +6,7 @@
 .footer a {
   color: var(--color-inverted-light);
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .footer a:hover, .footer a:focus {
@@ -21,7 +22,7 @@
 .footerRow a {
   color: var(--color-inverted-light);
   text-decoration: none;
-  margin-right: 1.5rem;
+  margin-right: 1.2rem;
 }
 
 .footerRow a:last-of-type {
@@ -69,4 +70,28 @@
 
 .alignRight {
   text-align: right;
+}
+
+.verticalOnMobile {
+  display: flex;
+}
+
+@media (max-width: 599px) {
+
+  .partnerLogos a {
+    margin: 1rem;
+  }
+
+  .verticalOnMobile {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .footerRow .verticalOnMobile a {
+    margin-right: 0;
+  }
+
+  .alignCenterOnMobile {
+    text-align: center;
+  }
 }
